[package]
name = "hash-pl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
blake2 = "0.10.6"
hex = "0.4.3"
hex-literal = "0.4.1"
hkdf = "0.12.3"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
ripemd = "0.1.3"
scrypt = "0.11.0"
sha2 = "0.10.8"
sha3 = "0.10.8"
